# pydisc

./: .gitignore  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
pydisc/: __init__.py  abc.py  activity.py  allowed_mentions.py  application_info.py  asset.py  attachment.py  audit_log.py  auto_moderation.py  backoff.py  client.py  collectibles.py  color.py  components.py  connection.py  embed.py  emoji.py  enums.py  errors.py  file.py  flags.py  guild.py  http.py  integrations.py  member.py  message.py  missing.py  mixins.py  object.py  overwrites.py  poll.py  ratelimits.py  reaction.py  resolved_data.py  role.py  role_connection.py  scheduled_event.py  sticker.py  teams.py  user.py  (+1 more)
pydisc/cache/: __init__.py  _types.py
pydisc/channels/: __init__.py  core.py  text.py
pydisc/commands/: __init__.py  dataclasses.py  models.py  options.py
pydisc/events/: __init__.py  router.py
pydisc/events/models/: __init__.py  auto_moderation.py  channel.py  commands.py  core.py
pydisc/websockets/: __init__.py  decompressor.py  enums.py  poller.py  response.py
